Issue: #FT-2972 Component: Changes: 1. Align checkbox and label in Edit Thematic modal.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/thematics.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/thematics.less
@@ -138,6 +138,12 @@
 
 		.applycheckbox-form-group {
 			padding-left: 15px;
+
+			.checkbox {
+				input[type="checkbox"] {
+					margin-top: 5px;
+				}
+			}
 		}
 	}
 }
